# torch-init-lens

./: LICENSE  README.md  git_patch.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md
docs/layer_analysis-docs/: analyze-cli.md
examples/: README.md  basic_usage.py  custom_module.py
examples/notebooks/: quickstart.ipynb
layer-analysis-subpackage/: README.md  __init__.py  __main__.py  cli.py  config.py  defaults.yaml  errors.py  introspection.py  losses.py  runner.py
layer-analysis-subpackage/analyzers/: activation_stats.py  base.py  gradient_analysis.py  gradient_ratios.py  numerical_precision.py  operator_norm.py  weight_distribution.py
layer-analysis-subpackage/docs/: analyze-cli.md
layer-analysis-subpackage/inputs/: generators.py
layer-analysis-subpackage/notebook/: generator.py  python_generator.py  templates.py
src/layer_analysis/: __init__.py  __main__.py  cli.py  config.py  errors.py  introspection.py  runner.py
src/layer_analysis/analyzers/: __init__.py  lipschitz.py  operator_norm.py  parameter_norms.py  rank_analysis.py  spectral_analysis.py
src/layer_analysis/inputs/: __init__.py
src/layer_analysis/notebook/: __init__.py  generator.py  python_generator.py  templates.py
tests/: test_inputs.py  test_introspection.py  test_runner.py
